--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-# Ignore compiled nvim plugins
-.config/nvim/plugin
-
-# Ignore lua lsp generated config
-.luarc.json
-
-# Ignore tmux plugins
-.config/tmux/plugins
-
-# Ignore DS_Store files
-.DS_Store
+# Ignore everything since this repo will go into my $HOME
+*
